--- a/task2/deployment.yaml
+++ b/task2/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: scaletestapp
+  labels:
+    app: scaletestapp
 spec:
   replicas: 1
   selector:
@@ -18,9 +20,21 @@ spec:
           ports:
             - containerPort: 8080
           resources:
+            requests:
+              memory: "20Mi"
+              cpu: "100m"
             limits:
               memory: "30Mi"
               cpu: "200m"
-            requests:
-              memory: "15Mi"
-              cpu: "100m"
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
