--- a/task2/hpa.yaml
+++ b/task2/hpa.yaml
@@ -1,7 +1,9 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: scaletestapp-hpa
+  name: scaletestapp-hpa-rps
+  labels:
+    app: scaletestapp
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -10,9 +12,23 @@ spec:
   minReplicas: 1
   maxReplicas: 10
   metrics:
-    - type: Resource
-      resource:
-        name: memory
+    - type: Pods
+      pods:
+        metric:
+          name: http_requests_per_second
         target:
-          type: Utilization
-          averageUtilization: 80
+          type: AverageValue
+          averageValue: "500m"
+  behavior:
+    scaleUp:
+      stabilizationWindowSeconds: 30
+      policies:
+        - type: Percent
+          value: 100
+          periodSeconds: 15
+    scaleDown:
+      stabilizationWindowSeconds: 300
+      policies:
+        - type: Percent
+          value: 10
+          periodSeconds: 60
