--- a/task2/service.yaml
+++ b/task2/service.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: scaletestapp-service
-spec:
-  selector:
+  labels:
     app: scaletestapp
+spec:
   type: NodePort
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 8080
       targetPort: 8080
+      protocol: TCP
+      name: http
+  selector:
+    app: scaletestapp
